hphp/hack/test/typecheck/erling_loop.php.exp
File "erling_loop.php", line 21, characters 10-11:
Invalid return type (Typing[4110])
File "erling_loop.php", line 12, characters 18-20:
Expected int
File "erling_loop.php", line 19, characters 10-16:
But got string
